refactor(cli): restructure CLI parsing with diagnostic system and execution results