@@ -3,131 +3,238 @@ package io.Cbuild;
 import picocli.CommandLine;
 
 import java.util.*;
+import java.util.concurrent.Callable;
 
 public class cli {
 
 
-    public static final class CliParseResponse {
+    public static final class DiagnosticResult {
 
-        private final boolean successful;
-        private final List<Exception> exceptions;
-        private final CLI_OPTIONS options;
+        public enum Severity {
+            INFO,
+            WARNING,
+            ERROR
+        }
 
-        private CliParseResponse(
-                boolean successful,
-                CLI_OPTIONS options,
-                List<? extends Exception> exceptions
-        ) {
-            this.successful = successful;
-            this.options = options;
-            this.exceptions = Collections.unmodifiableList(
-                    new ArrayList<>(
-                            Objects.requireNonNull(
-                                    exceptions,
-                                    "exceptions cannot be null"
-                            )
-                    )
-            );
+        public static final class Diagnostic {
 
-            if (successful && options == null) {
-                throw new IllegalArgumentException(
-                        "A successful parse response must contain parsed options"
-                );
+            private final Severity severity;
+            private final String message;
+
+            public Diagnostic(Severity severity, String message) {
+                this.severity = Objects.requireNonNull(severity);
+                this.message = Objects.requireNonNull(message);
             }
 
-            if (successful && !this.exceptions.isEmpty()) {
-                throw new IllegalArgumentException(
-                        "A successful parse response cannot contain exceptions"
-                );
+            public Severity getSeverity() {
+                return severity;
             }
 
-            if (!successful && this.exceptions.isEmpty()) {
-                throw new IllegalArgumentException(
-                        "A failed parse response must contain at least one exception"
-                );
+            public String getMessage() {
+                return message;
+            }
+
+            @Override
+            public String toString() {
+                return severity + ": " + message;
             }
         }
 
-        public static CliParseResponse success(CLI_OPTIONS options) {
-            return new CliParseResponse(
-                    true,
-                    Objects.requireNonNull(options, "options cannot be null"),
-                    List.of()
-            );
-        }
+        private final List<Diagnostic> diagnostics;
 
-        public static CliParseResponse failure(Exception exception) {
-            return new CliParseResponse(
-                    false,
-                    null,
-                    List.of(
-                            Objects.requireNonNull(
-                                    exception,
-                                    "exception cannot be null"
-                            )
-                    )
+        public DiagnosticResult(List<Diagnostic> diagnostics) {
+            this.diagnostics = Collections.unmodifiableList(
+                    new ArrayList<>(Objects.requireNonNull(diagnostics))
             );
-        }
-
-        public static CliParseResponse failure(
-                List<? extends Exception> exceptions
-        ) {
-            return new CliParseResponse(
-                    false,
-                    null,
-                    exceptions
-            );
-        }
-
-        public boolean isSuccessful() {
-            return successful;
         }
 
         public boolean hasErrors() {
-            return !exceptions.isEmpty();
+            return diagnostics.stream()
+                    .anyMatch(d -> d.getSeverity() == Severity.ERROR);
         }
 
-        public boolean hasOptions() {
-            return options != null;
+        public boolean hasWarnings() {
+            return diagnostics.stream()
+                    .anyMatch(d -> d.getSeverity() == Severity.WARNING);
+        }
+
+        public List<Diagnostic> getDiagnostics() {
+            return diagnostics;
+        }
+
+        public static DiagnosticResult empty() {
+            return new DiagnosticResult(List.of());
+        }
+
+        public static DiagnosticResult of(Diagnostic diagnostic) {
+            return new DiagnosticResult(List.of(diagnostic));
+        }
+
+        public static DiagnosticResult from(List<Exception> exceptions) {
+            List<Diagnostic> diagnostics = new ArrayList<>();
+            for(Exception ex : exceptions) {
+                diagnostics.add(new Diagnostic(Severity.ERROR, ex.getMessage()));
+            }
+            return new DiagnosticResult(diagnostics);
+        }
+    }
+
+    public static final class CliParseResult {
+
+        private final boolean success;
+        private final DiagnosticResult diagnostic;
+        private final CLI_OPTIONS options;
+
+        private CliParseResult(
+                boolean success,
+                DiagnosticResult diagnostic,
+                CLI_OPTIONS options
+        ) {
+            this.success = success;
+            this.diagnostic = Objects.requireNonNull(
+                    diagnostic,
+                    "diagnostic cannot be null"
+            );
+            this.options = options;
+        }
+
+        public static CliParseResult success(
+                CLI_OPTIONS options,
+                DiagnosticResult diagnostic
+        ) {
+            return new CliParseResult(
+                    true,
+                    diagnostic,
+                    options
+            );
+        }
+
+        public static CliParseResult success(CLI_OPTIONS options) {
+            return new CliParseResult(
+                    true,
+                    DiagnosticResult.empty(),
+                    options
+            );
+        }
+
+        public static CliParseResult failure(
+                DiagnosticResult diagnostic
+        ) {
+            return new CliParseResult(
+                    false,
+                    diagnostic,
+                    null
+            );
+        }
+
+        public boolean isSuccess() {
+            return success;
+        }
+
+        public DiagnosticResult getDiagnostic() {
+            return diagnostic;
         }
 
         public CLI_OPTIONS getOptions() {
             return options;
         }
+    }
 
-        public <T extends CLI_OPTIONS> boolean hasOptionsType(
-                Class<T> optionsType
+    public static final class CliExecutionResult {
+
+        private final boolean success;
+        private final int exitCode;
+        private final DiagnosticResult diagnostic;
+        private final CLI_OPTIONS options;
+
+        private CliExecutionResult(
+                boolean success,
+                int exitCode,
+                DiagnosticResult diagnostic,
+                CLI_OPTIONS options
         ) {
-            Objects.requireNonNull(optionsType, "optionsType cannot be null");
-            return optionsType.isInstance(options);
+            this.success = success;
+            this.exitCode = exitCode;
+            this.diagnostic = Objects.requireNonNull(
+                    diagnostic,
+                    "diagnostic cannot be null"
+            );
+            this.options = options;
         }
 
-        public <T extends CLI_OPTIONS> T getOptionsAs(
-                Class<T> optionsType
+        public static CliExecutionResult success(
+                DiagnosticResult diagnostic,
+                CLI_OPTIONS options
         ) {
-            Objects.requireNonNull(optionsType, "optionsType cannot be null");
+            return new CliExecutionResult(
+                    true,
+                    0,
+                    diagnostic,
+                    options
+            );
+        }
 
-            if (!optionsType.isInstance(options)) {
-                throw new IllegalStateException(
-                        "Parsed options are not of type " +
-                                optionsType.getSimpleName()
-                );
+        public static CliExecutionResult success(CLI_OPTIONS options) {
+            return new CliExecutionResult(
+                    true,
+                    0,
+                    DiagnosticResult.empty(),
+                    options
+            );
+        }
+
+        public static CliExecutionResult failure(
+                int exitCode,
+                DiagnosticResult diagnostic,
+                CLI_OPTIONS options
+        ) {
+            return new CliExecutionResult(
+                    false,
+                    exitCode,
+                    diagnostic,
+                    options
+            );
+        }
+
+        public static CliExecutionResult failure(
+                int exitCode,
+                Exception exception
+        ) {
+            Objects.requireNonNull(
+                    exception,
+                    "exception cannot be null"
+            );
+
+            String message = exception.getMessage();
+
+            if (message == null || message.isBlank()) {
+                message = exception.getClass().getSimpleName();
             }
 
-            return optionsType.cast(options);
+            DiagnosticResult diagnostic = DiagnosticResult.of(
+                    new DiagnosticResult.Diagnostic(
+                            DiagnosticResult.Severity.ERROR,
+                            message
+                    )
+            );
+
+            return failure(exitCode, diagnostic, null);
         }
 
-        public List<Exception> getExceptions() {
-            return exceptions;
+        public boolean isSuccess() {
+            return success;
         }
 
-        @Override
-        public String toString() {
-            return
-                    "successful=" + successful + "\n" +
-                    "options=" + options + "\n" +
-                    "exceptions=" + exceptions + "\n"
-                    ;
+        public int getExitCode() {
+            return exitCode;
+        }
+
+        public DiagnosticResult getDiagnostic() {
+            return diagnostic;
+        }
+
+        public CLI_OPTIONS getOptions() {
+            return this.options;
         }
     }
 
@@ -152,37 +259,109 @@ public class cli {
                 .toArray(String[]::new);
     }
 
-    public CliParseResponse parse() {
-        boolean isMinimalApi = isMinimalApiMode(this.args);
-        if(isMinimalApi) {
-            this.args = removeMinimalApiFlag(this.args);
-        }
-        CommandLine commandLine;
-        CLI_OPTIONS options;
+    public CliParseResult parse() {
+        boolean minimalApiMode = isMinimalApiMode(this.args);
 
-        if(isMinimalApi) {
-            options = new cli.CLI_OPTIONS.MinimalApi();
-            commandLine = new CommandLine(options);
-        }else {
-            options = new cli.CLI_OPTIONS.cBuildApi();
-            commandLine = new CommandLine(options);
-        }
+        String[] parsedArgs = minimalApiMode
+                ? removeMinimalApiFlag(this.args)
+                : this.args;
 
-        commandLine.getCommandSpec().parser().collectErrors(true);
-        CommandLine.ParseResult parseResult = commandLine.parseArgs(args);
+        CLI_OPTIONS options = minimalApiMode
+                ? new CLI_OPTIONS.MinimalApi()
+                : new CLI_OPTIONS.cBuildApi();
+
+        CommandLine commandLine = new CommandLine(options);
+
+        commandLine.getCommandSpec()
+                .parser()
+                .collectErrors(true);
+
+        CommandLine.ParseResult parseResult =
+                commandLine.parseArgs(parsedArgs);
+
         List<Exception> parseErrors = parseResult.errors();
 
-        if(!parseErrors.isEmpty()) {
-            return CliParseResponse.failure(parseErrors);
+        if (!parseErrors.isEmpty()) {
+            DiagnosticResult diagnostics =
+                    DiagnosticResult.from(parseErrors);
+
+            return CliParseResult.failure(diagnostics);
         }
 
-        return CliParseResponse.success(options);
+        return CliParseResult.success(options);
+    }
+
+    public CliExecutionResult execute() {
+        boolean minimalApiMode = isMinimalApiMode(this.args);
+
+        String[] executionArgs = minimalApiMode
+                ? removeMinimalApiFlag(this.args)
+                : this.args;
+
+        CLI_OPTIONS options = minimalApiMode
+                ? new CLI_OPTIONS.MinimalApi()
+                : new CLI_OPTIONS.cBuildApi();
+
+        CommandLine commandLine = new CommandLine(options);
+
+        List<DiagnosticResult.Diagnostic> diagnostics =
+                new ArrayList<>();
+
+        commandLine.setParameterExceptionHandler((exception, args) -> {
+            diagnostics.add(
+                    new DiagnosticResult.Diagnostic(
+                            DiagnosticResult.Severity.ERROR,
+                            getExceptionMessage(exception)
+                    )
+            );
+
+            return CommandLine.ExitCode.USAGE;
+        });
+
+        commandLine.setExecutionExceptionHandler(
+                (exception, cmd, parseResult) -> {
+                    diagnostics.add(
+                            new DiagnosticResult.Diagnostic(
+                                    DiagnosticResult.Severity.ERROR,
+                                    getExceptionMessage(exception)
+                            )
+                    );
+
+                    return CommandLine.ExitCode.SOFTWARE;
+                }
+        );
+
+        int exitCode = commandLine.execute(executionArgs);
+
+        DiagnosticResult diagnosticResult =
+                new DiagnosticResult(diagnostics);
+
+
+
+        if (exitCode != CommandLine.ExitCode.OK) {
+            return CliExecutionResult.failure(
+                    exitCode,
+                    diagnosticResult,
+                    null
+            );
+        }
+
+        return CliExecutionResult.success(options);
+    }
+
+    private static String getExceptionMessage(Exception exception) {
+        String message = exception.getMessage();
+
+        if (message == null || message.isBlank()) {
+            return exception.getClass().getSimpleName();
+        }
+
+        return message;
     }
 
     public static class CLI_OPTIONS {
 
-
-        public static class MinimalApi extends CLI_OPTIONS {
+        public static class MinimalApi extends CLI_OPTIONS implements Callable<Void> {
 
             @CommandLine.Option(
                     names = "--sequential",
@@ -226,6 +405,38 @@ public class cli {
                         "targets=" + Arrays.toString(targets) + "\n" +
                         "helpRequested=" + helpRequested
                         ;
+            }
+
+            @Override
+            public Void call() throws Exception {
+                // check parallel job count
+                List<DiagnosticResult.Diagnostic> diagnostics = new ArrayList<>();
+
+                if (this.parallelJobCount <= 0) {
+                    diagnostics.add(
+                            new DiagnosticResult.Diagnostic(
+                                    DiagnosticResult.Severity.WARNING,
+                                    "Job count must be greater than zero. Falling back to 1."
+                            )
+                    );
+
+                    this.parallelJobCount = 1;
+                }
+
+                if (this.parallelJobCount > 0 && this.buildSequential) {
+                    diagnostics.add(
+                            new DiagnosticResult.Diagnostic(
+                                    DiagnosticResult.Severity.WARNING,
+                                    "The sequential build option cannot be used together with the parallel jobs option. Sequential mode will be used."
+                            )
+                    );
+
+                    this.parallelJobCount = -1;
+                }
+
+
+                new CliParseResult(true, new DiagnosticResult(diagnostics), this);
+                return null;
             }
         }
 
